--- a/meeting/mysql/mysql-deployment.yml
+++ b/meeting/mysql/mysql-deployment.yml
@@ -1,25 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysql
-spec:
-  ports:
-  - port: 3306
-  selector:
-    app: mysql
-  type: LoadBalancer 
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pv-claim
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 20Gi
----
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
@@ -41,7 +19,7 @@ spec:
         env:
           # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
-          value: password
+          value: 3ayx4HSsduxS4gEU8Ut9Lv4gPs5uTbXH5awDde9EQ5j
         ports:
         - containerPort: 3306
           name: mysql
