--- a/meeting/mysql/mysql-service.yml
+++ b/meeting/mysql/mysql-service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: meeting-mysql
 spec:
   ports:
   - port: 3306
   selector:
-    app: mysql
+    app: meeting-mysql
   type: LoadBalancer 
