--- a/meetings/templates/service.yaml
+++ b/meetings/templates/service.yaml
@@ -1,10 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: micro-meeting
-  labels:
-    app: micro-meeting
-    tier: backend
+  name: micro-meeting-service
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,7 +9,7 @@ spec:
   - port: {{ .Values.service.port }}
     protocol: {{ .Values.deployment.containerProtocol}}    
     targetPort: {{ .Values.deployment.containerPort}}
-
+    name: http
   selector:
     microservice: {{ .Values.deployment.name}}
     
